--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.0.0",
   "license": "MIT",
   "type": "module",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.mjs",
-  "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/types/index.d.ts",
@@ -16,9 +13,18 @@
     "./esm": "./dist/esm/index.mjs",
     "./package.json": "./package.json"
   },
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.mjs",
+  "types": "./dist/types/index.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
   "scripts": {
     "build": "tsx build.js",
-    "dev": "tsx build.js --dev"
+    "dev": "tsx build.js --dev",
+    "test": "uvu",
+    "test:ci": "c8 uvu"
   },
   "dependencies": {
     "defu": "^6.1.3",
@@ -28,9 +34,14 @@
   "devDependencies": {
     "@barelyhuman/prettier-config": "^1.1.0",
     "@types/node": "^20.10.2",
+    "c8": "^8.0.1",
     "prettier": "^3.1.0",
     "tsc-prog": "^2.3.0",
     "tsx": "^4.6.1",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "uvu": "^0.5.6"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
