--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "scripts": {
     "build": "tsx build.js",
+    "next": "bumpp",
     "dev": "tsx build.js --dev",
     "test": "uvu",
     "test:ci": "c8 uvu"
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@barelyhuman/prettier-config": "^1.1.0",
     "@types/node": "^20.10.2",
+    "bumpp": "^9.2.0",
     "c8": "^8.0.1",
     "prettier": "^3.1.0",
     "tsc-prog": "^2.3.0",
