--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build
-        run: npm build
+        run: npm run build
       - name: Test
         run: npm run test:ci
