--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   ],
   "scripts": {
     "build": "tsx build.js",
-    "next": "bumpp",
     "dev": "tsx build.js --dev",
+    "fix": "prettier --write .",
+    "next": "bumpp",
     "test": "uvu",
     "test:ci": "c8 uvu"
   },
+  "prettier": "@barelyhuman/prettier-config",
   "dependencies": {
     "defu": "^6.1.3",
     "esbuild": "^0.19.8",
