--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esbuild-multicontext",
-  "description": "minimal wrapper for esbuild's context API",
+  "description": "Minimal wrapper over esbuild's context API",
   "version": "0.0.1-beta.2",
   "license": "MIT",
   "type": "module",
