chore: add example
basic example satisfying a common express app

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "fix": "prettier --write .",
     "next": "bumpp",
     "test": "uvu",
-    "test:ci": "c8 uvu"
+    "test:ci": "c8 uvu",
+    "prepare": "npm run build"
   },
   "prettier": "@barelyhuman/prettier-config",
   "dependencies": {
