--- a/.github/workflows/merge-bot.yml
+++ b/.github/workflows/merge-bot.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm test:ci
+          npm run test:ci
     
   automerge:
     needs: test
