--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
       "import": "./dist/esm/index.mjs",
       "require": "./dist/cjs/index.js"
     },
+    "./watcher": {
+      "types": "./dist/types/watcher.d.ts",
+      "import": "./dist/esm/watcher.mjs",
+      "require": "./dist/cjs/watcher.js"
+    },
     "./cjs": "./dist/esm/index.js",
     "./esm": "./dist/esm/index.mjs",
     "./package.json": "./package.json"
@@ -32,6 +37,7 @@
   },
   "prettier": "@barelyhuman/prettier-config",
   "dependencies": {
+    "chokidar": "^3.6.0",
     "defu": "^6.1.3",
     "esbuild": "^0.20.1",
     "tiny-glob": "^0.2.9"
