--- a/package.json
+++ b/package.json
@@ -7,33 +7,33 @@
   "exports": {
     ".": {
       "types": {
-        "import": "./dist/esm/index.d.mts",
-        "require": "./dist/cjs/index.d.cts"
+        "import": "./dist/esm/index.d.ts",
+        "require": "./dist/cjs/index.d.ts"
       },
       "import": "./dist/esm/index.mjs",
-      "require": "./dist/cjs/index.js"
+      "require": "./dist/cjs/index.cjs"
     },
     "./watcher": {
       "types": {
-        "import": "./dist/esm/watcher.d.mts",
-        "require": "./dist/cjs/watcher.d.cts"
+        "import": "./dist/esm/watcher.d.ts",
+        "require": "./dist/cjs/watcher.d.ts"
       },
       "import": "./dist/esm/watcher.mjs",
-      "require": "./dist/cjs/watcher.js"
+      "require": "./dist/cjs/watcher.cjs"
     },
-    "./cjs": "./dist/cjs/index.js",
+    "./cjs": "./dist/cjs/index.cjs",
     "./esm": "./dist/esm/index.mjs",
     "./package.json": "./package.json"
   },
-  "main": "dist/cjs/index.js",
+  "main": "dist/cjs/index.cjs",
   "module": "dist/esm/index.mjs",
-  "types": "./dist/cjs/index.d.cts",
+  "types": "./dist/cjs/index.d.ts",
   "files": [
     "dist",
     "src"
   ],
   "scripts": {
-    "build": "tsx build.js",
+    "build": "wrap2",
     "dev": "tsx build.js --dev",
     "fix": "prettier --write .",
     "next": "bumpp",
@@ -48,6 +48,7 @@
     "esbuild": "^0.20.1",
     "tiny-glob": "^0.2.9"
   },
+  "wrap": {},
   "devDependencies": {
     "@barelyhuman/prettier-config": "^1.1.0",
     "@types/node": "^20.10.2",
@@ -57,7 +58,8 @@
     "tsc-prog": "^2.3.0",
     "tsx": "^4.6.1",
     "typescript": "^5.3.2",
-    "uvu": "^0.5.6"
+    "uvu": "^0.5.6",
+    "wrap2": "^0.0.2-beta.3"
   },
   "publishConfig": {
     "access": "public"
