--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "require": "./dist/cjs/index.d.cts"
       },
       "import": "./dist/esm/index.mjs",
-      "require": "./dist/cjs/index.js"
+      "require": "./dist/cjs/index.cjs"
     },
     "./watcher": {
       "types": {
@@ -19,13 +19,13 @@
         "require": "./dist/cjs/watcher.d.cts"
       },
       "import": "./dist/esm/watcher.mjs",
-      "require": "./dist/cjs/watcher.js"
+      "require": "./dist/cjs/watcher.cjs"
     },
-    "./cjs": "./dist/cjs/index.js",
+    "./cjs": "./dist/cjs/index.cjs",
     "./esm": "./dist/esm/index.mjs",
     "./package.json": "./package.json"
   },
-  "main": "dist/cjs/index.js",
+  "main": "dist/cjs/index.cjs",
   "module": "dist/esm/index.mjs",
   "types": "./dist/cjs/index.d.cts",
   "files": [
@@ -33,8 +33,8 @@
     "src"
   ],
   "scripts": {
-    "build": "tsx build.js",
-    "dev": "tsx build.js --dev",
+    "build": "tsx build.mjs",
+    "dev": "tsx build.mjs --dev",
     "fix": "prettier --write .",
     "next": "bumpp",
     "test": "uvu",
@@ -54,9 +54,11 @@
     "bumpp": "^9.2.0",
     "c8": "^10.1.2",
     "prettier": "^3.1.0",
+    "rollup": "^4.18.0",
+    "rollup-plugin-dts": "^6.1.1",
     "tsc-prog": "^2.3.0",
     "tsx": "^4.6.1",
-    "typescript": "^5.3.2",
+    "typescript": "^5.5.3",
     "uvu": "^0.5.6"
   },
   "publishConfig": {
