--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/node": "^22.0.0",
     "bumpp": "^10.0.1",
     "c8": "^10.1.2",
+    "kleur": "^4.1.5",
     "prettier": "^3.1.0",
     "rollup": "^4.18.0",
     "rollup-plugin-dts": "^6.1.1",
