--- a/package.json
+++ b/package.json
@@ -37,15 +37,17 @@
     "dev": "tsx build.mjs --dev",
     "fix": "prettier --write .",
     "next": "bumpp",
-    "test": "uvu",
-    "test:ci": "c8 uvu",
+    "test": "uvu -r tsm",
+    "test:ci": "c8 uvu -r tsm",
     "prepare": "npm run build"
   },
   "prettier": "@barelyhuman/prettier-config",
   "dependencies": {
+    "@types/sinon": "^17.0.3",
     "chokidar": "^4.0.0",
     "defu": "^6.1.3",
     "esbuild": "^0.24.0",
+    "sinon": "^19.0.2",
     "tiny-glob": "^0.2.9"
   },
   "devDependencies": {
@@ -58,6 +60,7 @@
     "rollup": "^4.18.0",
     "rollup-plugin-dts": "^6.1.1",
     "tsc-prog": "^2.3.0",
+    "tsm": "^2.3.0",
     "tsx": "^4.6.1",
     "typescript": "^5.5.3",
     "uvu": "^0.5.6"
