--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
       - '*-beta.*'
 
 jobs:
-  publish_beta:
+  publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
