--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "dev": "tsx build.mjs --dev",
     "fix": "prettier --write .",
     "next": "bumpp",
-    "test": "uvu -r tsm",
-    "test:ci": "c8 uvu -r tsm",
+    "test": "tsx --test",
+    "test:ci": "c8 tsx --test",
     "prepare": "npm run build"
   },
   "prettier": "@barelyhuman/prettier-config",
@@ -60,10 +60,8 @@
     "rollup": "^4.53.3",
     "rollup-plugin-dts": "^6.3.0",
     "tsc-prog": "^2.3.0",
-    "tsm": "^2.3.0",
     "tsx": "^4.21.0",
-    "typescript": "^5.9.3",
-    "uvu": "^0.5.6"
+    "typescript": "^5.9.3"
   },
   "publishConfig": {
     "access": "public"
