chore: add optional dependency for Rollup
Added @rollup/rollup-linux-x64-gnu as an optional dependency in package.json and package-lock.json.

--- a/package.json
+++ b/package.json
@@ -65,5 +65,8 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "*"
   }
 }
